<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffececec">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:background="#000"
            android:id="@+id/titleBar"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AppTitle"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/about"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="36dp"
            />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:id="@+id/backButton"
               android:layout_marginTop="4dp"
               android:src="@drawable/ic_menu_back"
            />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"
            />

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleBar">
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_title"
                    android:textColor="#dd373c37"
                    android:textSize="23sp"
                    android:layout_margin="7dp"
                    android:id="@+id/about_app_title"
                    android:textStyle="bold"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_text"
                    android:textColor="#dd373c37"
                    android:textSize="23sp"
                    android:layout_margin="7dp"
                    android:layout_below="@+id/about_app_title"
                    android:id="@+id/about_app_text"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developer_title"
                    android:textColor="#dd373c37"
                    android:textSize="23sp"
                    android:layout_margin="7dp"
                    android:id="@+id/about_developer_title"
                    android:layout_below="@+id/about_app_text"
                    android:textStyle="bold"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developer_text"
                    android:textColor="#dd373c37"
                    android:textSize="23sp"
                    android:layout_margin="7dp"
                    android:layout_below="@+id/about_developer_title"
                    android:id="@+id/about_developer_text"
                    />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>