<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/header_bg_color"
            android:id="@+id/titleBar"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AppTitle"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/choose_level"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="40dp"
            />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:id="@+id/backButton"
               android:layout_marginTop="4dp"
               android:padding="4dp"
               android:src="@drawable/ic_menu_back"
            />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"
            />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/titleBar"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:id="@+id/scrollView2">
        <RelativeLayout android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:layout_marginBottom="15dp">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_activity"
                    android:textSize="25sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_active_background"
                    android:id="@+id/firstActivityButton"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_view_background"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/firstActivityButton"
                    android:id="@+id/secondActivityButton"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:layout_below="@id/secondActivityButton"
                    android:background="@drawable/ic_list_view_background"
                    android:id="@+id/thirdActivityButton"
                    android:layout_marginBottom="15dp"

                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_activity"
                    android:textSize="25sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_view_background"
                    android:layout_below="@id/thirdActivityButton"
                    android:id="@+id/fourthActivityButton"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_view_background"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/fourthActivityButton"
                    android:id="@+id/fifthActivityButton"
                    android:visibility="gone"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sixth_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:layout_below="@id/fifthActivityButton"
                    android:background="@drawable/ic_list_view_background"
                    android:id="@+id/sixthActivityButton"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"

                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seventh_activity"
                    android:textSize="25sp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_view_background"
                    android:layout_below="@id/sixthActivityButton"
                    android:id="@+id/seventhActivityButton"
                    android:visibility="gone"

                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eighth_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:background="@drawable/ic_list_view_background"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/seventhActivityButton"
                    android:id="@+id/eighthActivityButton"
                    android:visibility="gone"

                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ninth_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:layout_below="@id/eighthActivityButton"
                    android:background="@drawable/ic_list_view_background"
                    android:id="@+id/ninthActivityButton"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"


                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tenth_activity"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    android:layout_below="@id/ninthActivityButton"
                    android:background="@drawable/ic_list_view_background"
                    android:id="@+id/tenthActivityButton"
                    android:visibility="gone"

                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_below="@id/firstActivityButton"
                    android:layout_marginRight="10dp"
                    android:id="@+id/secondActivityButtonKey"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_below="@id/secondActivityButton"
                    android:layout_marginRight="10dp"
                    android:id="@+id/thirdActivityButtonKey"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/thirdActivityButton"
                    android:id="@+id/fourthActivityButtonKey"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/fourthActivityButton"
                    android:id="@+id/fifthActivityButtonKey"
                    android:visibility="gone"

                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/fifthActivityButton"
                    android:id="@+id/sixthActivityButtonKey"
                    android:visibility="gone"

                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/sixthActivityButton"
                    android:id="@+id/seventhActivityButtonKey"
                    android:visibility="gone"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/seventhActivityButton"
                    android:id="@+id/eightActivityButtonKey"
                    android:visibility="gone"

                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/eighthActivityButton"
                    android:id="@+id/ninthActivityButtonKey"
                    android:visibility="gone"

                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_idle_lock"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/ninthActivityButton"
                    android:id="@+id/tenthActivityButtonKey"
                    android:visibility="gone"

                    />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>