<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#fff"
                android:id="@+id/container"
        >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/header_bg_color"
            android:id="@+id/titleBar"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/AppTitle"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="34dp"
            />

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:id="@+id/homeIcon"
               android:layout_marginTop="4dp"
               android:src="@drawable/ic_menu_home"
            />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"
            android:id="@+id/shareApp"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/continueButton"
            android:textSize="23sp"
            android:gravity="center|bottom"
            android:layout_alignParentLeft="true"
            android:id="@+id/homeMenu1"
            android:layout_above="@+id/centerImage"
            android:layout_below="@id/titleBar"
            android:layout_toLeftOf="@+id/divider"
            android:textColor="#ff534e51"
            android:textStyle="bold"
            android:typeface="serif"
            />
    <TextView
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="#ffb3b3b3"
            android:id="@+id/divider"
            android:layout_below="@id/titleBar"
            android:layout_above="@+id/centerImage"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/start_new"
            android:textSize="24sp"
            android:gravity="center|bottom"
            android:layout_above="@id/centerImage"
            android:layout_below="@id/titleBar"
            android:layout_toLeftOf="@id/divider"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/divider"
            android:id="@+id/homeMenu2"
            android:textColor="#ff534e51"
            android:textStyle="bold"
            android:typeface="serif"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:background="@drawable/wordtop"
            android:id="@+id/centerImage"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/rate_it"
            android:textSize="24sp"
            android:gravity="center|bottom"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/footer"
            android:layout_toLeftOf="@+id/divider2"
            android:layout_below="@+id/centerImage"
            android:id="@+id/homeMenu3"
            android:textColor="#ff534e51"
            android:textStyle="bold"
            android:typeface="serif"/>
    <TextView
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="#ffb3b3b3"
            android:layout_below="@+id/centerImage"
            android:id="@+id/divider2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/options"
            android:textSize="24sp"
            android:gravity="center|bottom"
            android:layout_below="@id/centerImage"
            android:layout_above="@+id/footer"
            android:layout_toRightOf="@+id/divider2"
            android:layout_alignParentRight="true"
            android:id="@+id/homeMenu4"
            android:textColor="#ff534e51"
            android:textStyle="bold"
            android:typeface="serif"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:id="@+id/footer"
            android:background="#ff6b5a3b"
            android:layout_alignParentBottom="true"

            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="7dp"
            android:layout_above="@id/footer"
            android:src="@android:drawable/ic_menu_info_details"
            android:id="@+id/about"


            />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_help"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="5dp"
            android:id="@+id/help"
            />


    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@id/homeMenu1"
            android:layout_alignLeft="@id/homeMenu1"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/ic_media_play"
            />
    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@id/homeMenu2"
            android:layout_alignLeft="@id/homeMenu2"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_timer"
            />
    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@id/homeMenu3"
            android:layout_alignLeft="@id/homeMenu3"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/btn_star_big_on"
            />
    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@id/homeMenu4"
            android:layout_alignLeft="@id/homeMenu4"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/ic_menu_manage"
            />


</RelativeLayout>